updated style and added package.json

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,5 @@
 // Variables
 
-@brand-primary: #2C3E50;
-@brand-success: #18BC9C;
+@brand-primary: #1E5A96;
+@brand-success: #69B978;
 @gray-lighter: lighten(#000, 93.5%);
