--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -18,7 +18,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-	color: @brand-success;
+	color: white;
 	outline: none;
 }
 
@@ -59,12 +59,12 @@ hr.star-light:after {
 }
 
 hr.star-primary {
-    border-color: @brand-primary;
+    border-color: #2c3e50;
 }
 
 hr.star-primary:after {
     background-color: white;
-    color: @brand-primary;
+    color: #2c3e50;
 }
 
 .img-centered {
@@ -175,7 +175,8 @@ section.success {
     a:focus,
     a:active,
     a.active {
-      color: @brand-primary;
+      color: white;
+	  text-decoration: underline;
       outline: none;
     }
 }
@@ -235,12 +236,63 @@ section.success {
     }
 }
 
+#contributors {
+  .contributors-item {
+	margin: 0 0 15px;
+	right: 0;
+	.portfolio-link {
+	  display: block;
+	  position: relative;
+	  max-width: 400px;
+	  margin: 0 auto;
+	  .caption {
+		background: fade(@brand-success, 90%);
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		transition: all ease 0.5s;
+		-webkit-transition: all ease 0.5s;
+		-moz-transition: all ease 0.5s;
+		&:hover {
+		  opacity: 1;
+		}
+		.caption-content {
+		  position: absolute;
+		  width: 100%;
+		  height: 20px;
+		  font-size: 20px;
+		  text-align: center;
+		  top: 50%;
+		  margin-top: -12px;
+		  color: white;
+		  i {
+			margin-top: -12px;
+		  }
+		  h3,
+		  h4 {
+			margin: 0;
+		  }
+		}
+	  }
+	}
+  }
+  * {
+	z-index: 2;
+  }
+}
+
 @media(min-width:767px) {
     #portfolio {
         .portfolio-item {
             margin: 0 0 30px;
         }
     }
+  #contributors {
+	.contributors-item {
+	  margin: 0 0 30px;
+	}
+  }
 }
 
 .btn-outline {
