--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -230,6 +230,11 @@ section.success {
                 }
             }
         }
+	  .calendaritem{
+		width: 100%;
+        font-size: 20px;
+		text-align: center;
+	  }
     }
     * {
         z-index: 2;
