--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -234,7 +234,12 @@ section.success {
 		width: 100%;
         font-size: 20px;
 		text-align: center;
+		h1 {
+		  color: #2c3e50;
+		  font-size: 8em;
+		}
 	  }
+
     }
     * {
         z-index: 2;
