added first two days

--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -239,6 +239,12 @@ section.success {
 		  font-size: 8em;
 		}
 	  }
+	  .inactivday{
+		h1 {
+		  color: #dddddd;
+		  font-size: 8em;
+		}
+	  }
 
     }
     * {
@@ -442,7 +448,7 @@ footer {
 	    border: none;
 	    min-height: 100%;
 	    padding: 100px 0;
-	    text-align: center;
+	    text-align: left;
 		h2 {
 	    	margin: 0;
 	    	font-size: 3em;
@@ -454,6 +460,15 @@ footer {
 			margin: 30px 0;
 		}
 	}
+  a,
+  a:hover,
+  a:focus,
+  a:active,
+  a.active {
+	color: @brand-primary;
+	text-decoration: underline;
+	outline: none;
+  }
     .close-modal {
         position: absolute;
         width:75px;
