--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -212,6 +212,10 @@ section.success a.active {
   color: #2c3e50;
   font-size: 8em;
 }
+#portfolio .portfolio-item .inactivday h1 {
+  color: #dddddd;
+  font-size: 8em;
+}
 #portfolio * {
   z-index: 2;
 }
@@ -389,7 +393,7 @@ footer .footer-below {
   border: none;
   min-height: 100%;
   padding: 100px 0;
-  text-align: center;
+  text-align: left;
 }
 .portfolio-modal .modal-content h2 {
   margin: 0;
@@ -400,6 +404,15 @@ footer .footer-below {
 }
 .portfolio-modal .modal-content .item-details {
   margin: 30px 0;
+}
+.portfolio-modal a,
+.portfolio-modal a:hover,
+.portfolio-modal a:focus,
+.portfolio-modal a:active,
+.portfolio-modal a.active {
+  color: #1E5A96;
+  text-decoration: underline;
+  outline: none;
 }
 .portfolio-modal .close-modal {
   position: absolute;
