--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contributions</h2>
+                    <h2>Adventskalender</h2>
                     <hr class="star-primary">
                 </div>
             </div>
