--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -203,6 +203,19 @@ section.success a.active {
 #portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
   margin: 0;
 }
+#portfolio .portfolio-item .calendaritem {
+  width: 100%;
+  font-size: 20px;
+  text-align: center;
+}
+#portfolio .portfolio-item .calendaritem h1 {
+  color: #2c3e50;
+  font-size: 8em;
+}
+#portfolio .portfolio-item .inactivday h1 {
+  color: #dddddd;
+  font-size: 8em;
+}
 #portfolio * {
   z-index: 2;
 }
@@ -245,13 +258,6 @@ section.success a.active {
 #contributors .contributors-item .portfolio-link .caption .caption-content h3,
 #contributors .contributors-item .portfolio-link .caption .caption-content h4 {
   margin: 0;
-}
-#contributors .contributors-item .avatar-container {
-  border-radius: 50%;
-  margin: 0;
-  max-width: 100%;
-  overflow: hidden;
-  position: relative;
 }
 #contributors * {
   z-index: 2;
@@ -387,7 +393,7 @@ footer .footer-below {
   border: none;
   min-height: 100%;
   padding: 100px 0;
-  text-align: center;
+  text-align: left;
 }
 .portfolio-modal .modal-content h2 {
   margin: 0;
@@ -398,6 +404,15 @@ footer .footer-below {
 }
 .portfolio-modal .modal-content .item-details {
   margin: 30px 0;
+}
+.portfolio-modal a,
+.portfolio-modal a:hover,
+.portfolio-modal a:focus,
+.portfolio-modal a:active,
+.portfolio-modal a.active {
+  color: #1E5A96;
+  text-decoration: underline;
+  outline: none;
 }
 .portfolio-modal .close-modal {
   position: absolute;
