--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,5 +1,5 @@
 {% for door in site.doors %}
-{% if door.active == 'true' %}
+{% if door.active %}
 <div class="portfolio-modal modal fade" id="contributions-day-{{door.day}}" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
