--- a/_includes/contributors.html
+++ b/_includes/contributors.html
@@ -240,6 +240,17 @@
                     </a>
                 </div>
                 <div class="col-sm-4 contributors-item">
+                    <a href="https://github.com/leggimann" class="portfolio-link">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <p>Lara Eggimann</p>
+                                <i class="fa fa-angle-double-up fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Eggimann-Lara-400x300.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 contributors-item">
                     <a href="https://github.com/resmo/" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
