added Janiss to the list

--- a/_includes/contributors.html
+++ b/_includes/contributors.html
@@ -251,6 +251,17 @@
                     </a>
                 </div>
                 <div class="col-sm-4 contributors-item">
+                    <a href="https://github.com/janissbinder" class="portfolio-link">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <p>Janiss Binder</p>
+                                <i class="fa fa-angle-double-up fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Binder-Jannis-400x300.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 contributors-item">
                     <a href="https://github.com/resmo/" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
