added renes pic

--- a/_includes/contributors.html
+++ b/_includes/contributors.html
@@ -269,7 +269,9 @@
                                 <i class="fa fa-angle-double-up fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/11/Tux-400x300.jpg" class="img-responsive" alt="">
+			<div style="height: 270px; width: 360px; overflow: hidden;">
+  			    <img src="https://avatars1.githubusercontent.com/u/23809?v=3&amp;s=460"  style="height: 360px; width: 360px;" alt="">
+			</div>
                     </a>
                 </div>
 
