statt unserer Tagline von Puzzle habe ich einen Satz hinzugefügt, der open auf der Seite die Challenge erklärt

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                     <div class="intro-text">
                         <span class="name">Th&ouml;mus Open Source Advents Challenge 2015</span>
                         <hr class="star-light">
-                        <span class="skills">PUZZLE ITC - Changing IT for the better.</span>
+                        <span class="skills">Wer schafft es im Advent jeden Tag einen Beitrag zu einem Open Source Projekt zu leisten?</span>
                     </div>
                 </div>
             </div>
