--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -140,7 +140,7 @@ section {
 }
 section h2 {
   margin: 0;
-  font-size: 3em;
+  font-size: 2em;
 }
 section.success {
   background: #69B978;
@@ -268,6 +268,9 @@ section.success a.active {
   }
   #contributors .contributors-item {
     margin: 0 0 30px;
+  }
+  section h2 {
+    font-size: 3em;
   }
 }
 .btn-outline {
@@ -413,6 +416,8 @@ footer .footer-below {
   color: #1E5A96;
   text-decoration: underline;
   outline: none;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 .portfolio-modal .close-modal {
   position: absolute;
