--- a/less/freelancer.less
+++ b/less/freelancer.less
@@ -2,15 +2,15 @@
 @import "mixins.less";
 
 body {
-	overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 p {
-	font-size: 20px;
+    font-size: 20px;
 }
 
 p.small {
-	font-size: 16px;
+    font-size: 16px;
 }
 
 a,
@@ -18,14 +18,14 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-	color: white;
-	outline: none;
+    color: white;
+    outline: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	text-transform: uppercase;
-	font-weight: 700;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
 }
 
 hr.star-light,
@@ -68,51 +68,51 @@ hr.star-primary:after {
 }
 
 .img-centered {
-	margin: 0 auto;
+    margin: 0 auto;
 }
 
 header {
-	text-align: center;
-	background: @brand-success;
-	color: white;
-	.container {
-		padding-top: 100px;
-		padding-bottom: 50px;
-	}
-	img {
-		display: block;
-		margin: 0 auto 20px;
-	}
-	.intro-text {
-		.name {
-			display: block;
-			font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-			text-transform: uppercase;
-			font-weight: 700;
-			font-size: 2em;
-		}
-		.skills {
-			font-size: 1.25em;
-			font-weight: 300;
-		}
-	}
+    text-align: center;
+    background: @brand-success;
+    color: white;
+    .container {
+        padding-top: 100px;
+        padding-bottom: 50px;
+    }
+    img {
+        display: block;
+        margin: 0 auto 20px;
+    }
+    .intro-text {
+        .name {
+            display: block;
+            font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            text-transform: uppercase;
+            font-weight: 700;
+            font-size: 2em;
+        }
+        .skills {
+            font-size: 1.25em;
+            font-weight: 300;
+        }
+    }
 }
 
 @media(min-width:768px) {
-	header {
-		.container {
-			padding-top: 200px;
-			padding-bottom: 100px;
-		}
-		.intro-text {
-			.name {
-				font-size: 4.75em;
-			}
-			.skills {
-				font-size: 1.75em;
-			}
-		}
-	}
+    header {
+        .container {
+            padding-top: 200px;
+            padding-bottom: 100px;
+        }
+        .intro-text {
+            .name {
+                font-size: 4.75em;
+            }
+            .skills {
+                font-size: 1.75em;
+            }
+        }
+    }
 }
 
 @media(min-width:768px) {
@@ -121,73 +121,73 @@ header {
         -webkit-transition: padding 0.3s;
         -moz-transition: padding 0.3s;
         transition: padding 0.3s;
-	    .navbar-brand {
-	        font-size: 2em;
-	        -webkit-transition: all 0.3s;
-	        -moz-transition: all 0.3s;
-	        transition: all 0.3s;
-	    }
+        .navbar-brand {
+            font-size: 2em;
+            -webkit-transition: all 0.3s;
+            -moz-transition: all 0.3s;
+            transition: all 0.3s;
+        }
     }
     .navbar-fixed-top.navbar-shrink {
         padding: 10px 0;
-		.navbar-brand {
-	        font-size: 1.5em;
-	    }
-	}
+        .navbar-brand {
+            font-size: 1.5em;
+        }
+    }
 }
 
 .navbar {
-	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	text-transform: uppercase;
-	font-weight: 700;
-	a:focus {
-		outline: none;
-	}
-	.navbar-nav {
-		letter-spacing: 1px;
-		li {
-			a:focus {
-				outline: none;
-			}
-		}
-	}
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    a:focus {
+        outline: none;
+    }
+    .navbar-nav {
+        letter-spacing: 1px;
+        li {
+            a:focus {
+                outline: none;
+            }
+        }
+    }
 }
 
 .navbar-default,
 .navbar-inverse {
-	border: none;
+    border: none;
 }
 
 section {
     padding: 100px 0;
     h2 {
-    	margin: 0;
-    	font-size: 2em;
+        margin: 0;
+        font-size: 2em;
     }
 }
 
 section.success {
-	background: @brand-success;
-	color: white;
+    background: @brand-success;
+    color: white;
 
     a,
     a:hover,
     a:focus,
     a:active,
     a.active {
-      color: white;
-	  text-decoration: underline;
-      outline: none;
+        color: white;
+        text-decoration: underline;
+        outline: none;
     }
 }
 
 @media(max-width:767px) {
-	section {
-		padding: 75px 0;
-	}
-	section.first {
-		padding-top: 75px;
-	}
+    section {
+        padding: 75px 0;
+    }
+    section.first {
+        padding-top: 75px;
+    }
 }
 
 #portfolio {
@@ -230,21 +230,21 @@ section.success {
                 }
             }
         }
-	  .calendaritem{
-		width: 100%;
-        font-size: 20px;
-		text-align: center;
-		h1 {
-		  color: #2c3e50;
-		  font-size: 8em;
-		}
-	  }
-	  .inactivday{
-		h1 {
-		  color: #dddddd;
-		  font-size: 8em;
-		}
-	  }
+        .calendaritem{
+            width: 100%;
+            font-size: 20px;
+            text-align: center;
+            h1 {
+                color: #2c3e50;
+                font-size: 8em;
+            }
+        }
+        .inactivday{
+            h1 {
+                color: #dddddd;
+                font-size: 8em;
+            }
+        }
 
     }
     * {
@@ -253,49 +253,49 @@ section.success {
 }
 
 #contributors {
-  .contributors-item {
-	margin: 0 0 15px;
-	right: 0;
-	.portfolio-link {
-	  display: block;
-	  position: relative;
-	  max-width: 400px;
-	  margin: 0 auto;
-	  .caption {
-		background: fade(@brand-success, 90%);
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		opacity: 0;
-		transition: all ease 0.5s;
-		-webkit-transition: all ease 0.5s;
-		-moz-transition: all ease 0.5s;
-		&:hover {
-		  opacity: 1;
-		}
-		.caption-content {
-		  position: absolute;
-		  width: 100%;
-		  height: 20px;
-		  font-size: 20px;
-		  text-align: center;
-		  top: 50%;
-		  margin-top: -12px;
-		  color: white;
-		  i {
-			margin-top: -12px;
-		  }
-		  h3,
-		  h4 {
-			margin: 0;
-		  }
-		}
-	  }
-	}
-  }
-  * {
-	z-index: 2;
-  }
+    .contributors-item {
+        margin: 0 0 15px;
+        right: 0;
+        .portfolio-link {
+            display: block;
+            position: relative;
+            max-width: 400px;
+            margin: 0 auto;
+            .caption {
+                background: fade(@brand-success, 90%);
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                opacity: 0;
+                transition: all ease 0.5s;
+                -webkit-transition: all ease 0.5s;
+                -moz-transition: all ease 0.5s;
+                &:hover {
+                    opacity: 1;
+                }
+                .caption-content {
+                    position: absolute;
+                    width: 100%;
+                    height: 20px;
+                    font-size: 20px;
+                    text-align: center;
+                    top: 50%;
+                    margin-top: -12px;
+                    color: white;
+                    i {
+                        margin-top: -12px;
+                    }
+                    h3,
+                    h4 {
+                        margin: 0;
+                    }
+                }
+            }
+        }
+    }
+    * {
+        z-index: 2;
+    }
 }
 
 @media(min-width:767px) {
@@ -305,9 +305,9 @@ section.success {
         }
     }
     #contributors {
-	    .contributors-item {
-	        margin: 0 0 30px;
-	    }
+        .contributors-item {
+            margin: 0 0 30px;
+        }
     }
     section h2 {
         font-size: 3em;
@@ -315,20 +315,20 @@ section.success {
 }
 
 .btn-outline {
-	color: white;
-	font-size: 20px;
-	border: solid 2px white;
-	background: transparent;
-	transition: all 0.3s ease-in-out;
-	margin-top: 15px;
-	&:hover,
-	&:focus,
-	&:active,
-	&.active {
-		color: @brand-success;
-		background: white;
-		border: solid 2px white;
-	}
+    color: white;
+    font-size: 20px;
+    border: solid 2px white;
+    background: transparent;
+    transition: all 0.3s ease-in-out;
+    margin-top: 15px;
+    &:hover,
+    &:focus,
+    &:active,
+    &.active {
+        color: @brand-success;
+        background: white;
+        border: solid 2px white;
+    }
 }
 
 .floating-label-form-group {
@@ -338,50 +338,50 @@ section.success {
     border-bottom: 1px solid @gray-lighter;
     input,
     textarea {
-	    z-index: 1;
-	    position: relative;
-	    padding-right: 0;
-	    padding-left: 0;
-	    border: none;
-	    border-radius: 0;
-	    font-size: 1.5em;
-	    background: none;
-	    box-shadow: none !important;
-	    resize: none;
+        z-index: 1;
+        position: relative;
+        padding-right: 0;
+        padding-left: 0;
+        border: none;
+        border-radius: 0;
+        font-size: 1.5em;
+        background: none;
+        box-shadow: none !important;
+        resize: none;
     }
     label {
-	    display: block;
-	    z-index: 0;
-	    position: relative;
-	    top: 2em;
-	    margin: 0;
-	    font-size: 0.85em;
-	    line-height: 1.764705882em;
-	    vertical-align: middle;
-	    vertical-align: baseline;
-	    opacity: 0;
-	    -webkit-transition: top 0.3s ease,opacity 0.3s ease;
-	    -moz-transition: top 0.3s ease,opacity 0.3s ease;
-	    -ms-transition: top 0.3s ease,opacity 0.3s ease;
-	    transition: top 0.3s ease,opacity 0.3s ease;
+        display: block;
+        z-index: 0;
+        position: relative;
+        top: 2em;
+        margin: 0;
+        font-size: 0.85em;
+        line-height: 1.764705882em;
+        vertical-align: middle;
+        vertical-align: baseline;
+        opacity: 0;
+        -webkit-transition: top 0.3s ease,opacity 0.3s ease;
+        -moz-transition: top 0.3s ease,opacity 0.3s ease;
+        -ms-transition: top 0.3s ease,opacity 0.3s ease;
+        transition: top 0.3s ease,opacity 0.3s ease;
     }
     &::not(:first-child) {
-	    padding-left: 14px;
-	    border-left: 1px solid @gray-lighter;
+        padding-left: 14px;
+        border-left: 1px solid @gray-lighter;
     }
 }
 
 .floating-label-form-group-with-value {
-	label {
-	    top: 0;
-	    opacity: 1;
-	}
+    label {
+        top: 0;
+        opacity: 1;
+    }
 }
 
 .floating-label-form-group-with-focus {
-	label {
-	    color: @brand-success;
-	}
+    label {
+        color: @brand-success;
+    }
 }
 
 form .row:first-child .floating-label-form-group {
@@ -389,38 +389,38 @@ form .row:first-child .floating-label-form-group {
 }
 
 footer {
-	color: white;
-	h3 {
-		margin-bottom: 30px;
-	}
-	.footer-above {
-		padding-top: 50px;
-		background-color: @brand-primary;
-	}
-	.footer-col {
-		margin-bottom: 50px;
-	}
-	.footer-below {
-		padding: 25px 0;
-		background-color: darken(@brand-primary, 5%);
-	}
+    color: white;
+    h3 {
+        margin-bottom: 30px;
+    }
+    .footer-above {
+        padding-top: 50px;
+        background-color: @brand-primary;
+    }
+    .footer-col {
+        margin-bottom: 50px;
+    }
+    .footer-below {
+        padding: 25px 0;
+        background-color: darken(@brand-primary, 5%);
+    }
 }
 
 .btn-social {
-	display: inline-block;
-	height: 50px;
-	width: 50px;
-	border: 2px solid white;
-	border-radius: 100%;
-	text-align: center;
-	font-size: 20px;
-	line-height: 45px;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    border: 2px solid white;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 20px;
+    line-height: 45px;
 }
 
 .btn:focus,
 .btn:active,
 .btn.active {
-	outline: none;
+    outline: none;
 }
 
 .scroll-top {
@@ -431,85 +431,39 @@ footer {
     height: 50px;
     z-index: 1049;
     .btn {
-	    width: 50px;
-	    height: 50px;
-	    border-radius: 100%;
-	    line-height: 25px;
-	    &:focus {
-	    	outline: none;
-	    }
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+        line-height: 25px;
+        &:focus {
+            outline: none;
+        }
     }
 }
 
-.portfolio-modal {
-	.modal-content {
-	    border-radius: 0;
-	    background-clip: border-box;
-	    -webkit-box-shadow: none;
-	    box-shadow: none;
-	    border: none;
-	    min-height: 100%;
-	    padding: 100px 0;
-	    text-align: left;
-		h2 {
-	    	margin: 0;
-	    	font-size: 3em;
-		}
-		img {
-			margin-bottom: 30px;
-		}
-		.item-details {
-			margin: 30px 0;
-		}
-	}
-  a,
-  a:hover,
-  a:focus,
-  a:active,
-  a.active {
-	color: @brand-primary;
-	text-decoration: underline;
-	outline: none;
-    overflow-wrap: break-word;
-    word-break: break-word;
-  }
-    .close-modal {
-        position: absolute;
-        width:75px;
-        height:75px;
-        background-color:transparent;
-        top: 25px;
-        right: 25px;
-        cursor: pointer;
-        &:hover {
-            opacity: 0.3;
-        }
-        .lr {
-            height:75px;
-            width:1px;
-            margin-left:35px;
-            background-color:@brand-primary;
-            transform: rotate(45deg);
-            -ms-transform: rotate(45deg);
-            /* IE 9 */
-            -webkit-transform: rotate(45deg);
-            /* Safari and Chrome */
-            z-index:1051;
-            .rl {
-                height:75px;
-                width:1px;
-                background-color:@brand-primary;
-                transform: rotate(90deg);
-                -ms-transform: rotate(90deg);
-                /* IE 9 */
-                -webkit-transform: rotate(90deg);
-                /* Safari and Chrome */
-                z-index:1052;
-            }
-        }
-    }
-    .modal-backdrop {
-    	opacity: 0;
-    	display: none;
+.contributions {
+    background-color: #69B978;
+    color: white;
+    padding: 2em;
+}
+.contributions a {
+    color: white;
+    text-decoration: underline;
+}
+.active-tool:before {
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 3em solid transparent;
+    border-right: 3em solid transparent;
+
+    border-bottom: 3em solid #69B978;
+    position: absolute;
+    bottom: -2em;
+    left: 30%;
+}
+@media(min-width:766px) {
+    .active-tool:before {
+        left: 35%;
     }
 }
