--- a/less/contributions.less
+++ b/less/contributions.less
@@ -13,9 +13,14 @@
     height: 0;
     border-left: 3em solid transparent;
     border-right: 3em solid transparent;
-
     border-bottom: 3em solid #69B978;
     position: absolute;
-    bottom: -2em;
+    bottom: -3em;
     left: ~"calc(50% - 3em)";
+}
+
+@media(min-width:767px) {
+    .active-tool:before {
+        bottom: -2em;
+    }
 }
