break long links

--- a/less/contributions.less
+++ b/less/contributions.less
@@ -6,6 +6,8 @@
 .contributions a {
     color: white;
     text-decoration: underline;
+    overflow-wrap: break-word;
+    word-break: break-word;
 }
 .active-tool:before {
     content: "";
