--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/puzzle_stamp_rgb.png" alt="">
+                    <img class="img-responsive" src="https://brand.puzzle.ch/images/logo_stamp_bg.svg" alt="">
                     <div class="intro-text">
                         <span class="name">Th&ouml;mus Open Source Advents Challenge 2015</span>
                         <hr class="star-light">
