use yaml for list of contributors

--- a/_includes/contributors.html
+++ b/_includes/contributors.html
@@ -1,281 +1,30 @@
-    <!-- Contributors Section -->
-    <section id="contributors">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Contributors</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/phil-pona" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Thomas Philipona</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Philipona-Thomas-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/mgafner" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Martin Gafner</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Gafner-Martin-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/RolandStuder" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Roland Studer</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/08/Studer-Roland-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/drnoa" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Daniel Binggeli</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Binggeli-Daniel-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/dtschan" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Daniel Tschan</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Tschan-Daniel-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/pmumenthaler" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Peter Mumenthaler</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Mumenthaler-Peter-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/codez" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Pascal Zumkehr</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/10/Zumkehr-Pascal-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/psunix" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Pascal Simon</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Simon-Pascal-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/sandroBeffa" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Sandro Beffa</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Beffa-Sandro-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/chrira" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Christoph Raaflaub</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Raaflaub-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/amsibamsi" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Anselm Strauss</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Strauss-Anselm-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/gro-gg" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Philipp Grogg</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/08/Grogg-Philipp-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/mburri" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Max Burri</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Burri-Max-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/plow" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Simon Fankhauser</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Fankhauser-Simon-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/hupf" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Mathis Hofer</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/10/Hofer-Mathis-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/phil-matti" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Philipp Matti</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Matti-Philipp-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/guggero" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Oliver Gugger</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/10/Gugger_Oliver-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/lbischof" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Lorenz Bischof</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Bischof-Lorenz-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/mamba" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Jürg Gerber</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Gerber-J%C3%BCrg-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/pgassmann" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Philipp Gassmann</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/08/Gassmann-Philipp-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/nerrehmit" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Tim Herren</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/08/Herren-Tim-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/leggimann" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Lara Eggimann</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Eggimann-Lara-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/janissbinder" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>Janiss Binder</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="https://www.puzzle.ch/wp-content/uploads/2015/07/Binder-Jannis-400x300.jpg" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 contributors-item">
-                    <a href="https://github.com/resmo/" class="portfolio-link">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <p>René Moser</p>
-                                <i class="fa fa-angle-double-up fa-3x"></i>
-                            </div>
-                        </div>
-			<div style="height: 270px; width: 360px; overflow: hidden;">
-  			    <img src="https://avatars1.githubusercontent.com/u/23809?v=3&amp;s=460"  style="height: 360px; width: 360px;" alt="">
-			</div>
-                    </a>
-                </div>
-
-
+<!-- Contributors Section -->
+<section id="contributors">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Contributors</h2>
+                <hr class="star-primary">
             </div>
         </div>
-    </section>
+        <div class="row">
+            {% for contributor in site.contributors %}
+            <div class="col-sm-4 contributors-item">
+                <a href="https://github.com/{{ contributor.github }}" class="portfolio-link">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <p>{{ contributor.name }}</p>
+                            <i class="fa fa-angle-double-up fa-3x"></i>
+                        </div>
+                    </div>
+                    {% if contributor.img contains 'http' %}
+                    <img src="{{ contributor.img }}" class="img-responsive" alt="">
+                    {% else %}
+                    <img src="{{site.img_base_url}}{{ contributor.img }}" class="img-responsive" alt="">
+                    {% endif %}
+                </a>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
