--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,15 @@
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-responsive" src="https://brand.puzzle.ch/images/logo_stamp_bg.svg" alt="">
-                    <div class="intro-text">
-                        <span class="name">Th&ouml;mus Open Source Advents Challenge 2015</span>
-                        <hr class="star-light">
-                        <span class="skills">Wer schafft es im Advent jeden Tag einen Beitrag zu einem Open Source Projekt zu leisten?</span>
-                    </div>
+<!-- Header -->
+<header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <img class="img-responsive" src="{{ site.logo }}" alt="">
+                <div class="intro-text">
+                    <span class="name">{{ site.title }}</span>
+                    <hr class="star-light">
+                    <span class="skills">{{ site.description }}</span>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+</header>
